fix align

--- a/source/asset/css/_layout/_footer.styl
+++ b/source/asset/css/_layout/_footer.styl
@@ -18,10 +18,10 @@
 	//border: 1px solid green
 
 .box-footer
-	width: 400px
-	margin: 0 auto
+	//width: 400px
+	//margin: 0 auto
 	//// debug
 	//border: 1px solid blue
 
 	@media screen and (max-width: trigger-width)
-		width: 200px
+		//width: 200px
