--- a/source/asset/css/_layout/_nav.styl
+++ b/source/asset/css/_layout/_nav.styl
@@ -17,5 +17,5 @@
 	//border: 1px solid blue
 
 .box-post-nav
-	width: 160px
-	margin: 0 auto
+	//width: 160px
+	//margin: 0 auto
